--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             <div class="info">
               <h1>Acorda Devinho</h1>
               <p>Banda Rockeseat</p>
-            
+<!-- ------------------controles----------->
               <div class="controles-3">
                 <div class="prev">
                   <svg
