--- a/index.html
+++ b/index.html
@@ -237,10 +237,18 @@
                   </svg>
                 </div>
               </div>
+              <div class="track-time">
+                <div class="track"></div>
+                <div class="time">
+                  <div class="total-tim">03:20</div>
+                  <div class="last-time">00:12</div>
+                </div>
+              </div>
               <!---------------BARRAS--------------->
             </div>
           </div>
         </div>
     
   </body>
+  <script src="./Script.js"></script>
 </html>
